test/cli/test/any-all-wildcard/kyverno-test.yaml
name: disallow-protected-namespaces
policies:
- policy.yaml
resources:
- resource.yaml
results:
- kind: Pod
  namespace: namespace1
  policy: disallow-protected-namespaces
  resources:
  - test1
  result: fail
  rule: disallow
- kind: Pod
  namespace: namespace2
  policy: disallow-protected-namespaces
  resources:
  - test2
  result: fail
  rule: disallow
# TODO CEB FIX
# - kind: Pod
#   namespace: namespace3
#   policy: disallow-protected-namespaces
#   resources:
#   - test3
#   result: skip
#   rule: disallow
