test/cli/test/any-all-wildcard/policy.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-protected-namespaces
spec:
  admission: true
  background: false
  rules:
  - match:
      all:
      - resources:
          kinds:
          - '*'
          namespaces:
          - namespace1
          - namespace2
    name: disallow
    validate:
      failureAction: Enforce
      deny: {}
      message: This resource is protected and changes are not allowed.
