test/cli/test/any-all-wildcard/test.yaml
---
name: disallow-protected-namespaces
policies:
  - policy.yaml
resources:
  - resource.yaml
results:
  - policy: disallow-protected-namespaces
    rule: disallow
    resource: test1
    kind: Pod
    namespace: namespace1
    result: fail
  - policy: disallow-protected-namespaces
    rule: disallow
    resource: test2
    kind: Pod
    namespace: namespace2
    result: fail
  - policy: disallow-protected-namespaces
    rule: disallow
    resource: test3
    kind: Pod
    namespace: namespace3
    result: skip
